Fix Layout bug...

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ div.schwarz {
 
     * {
       margin: 0;
-      padding: 50px;
+      /* padding: 50px; */
       box-sizing: border-box;
     }
 
@@ -81,31 +81,33 @@ div.schwarz {
       display: flex;
       align-items: center;
       padding: 15px;
-      color: rgb(0, 0, 0);
+      color: rgb(163, 0, 0);
       cursor: pointer;
       text-decoration: none;
     }
 
     .nav-item:hover {
         margin-top: 0px;
-      /*background: #333;*/
+      /* background: #333; */
       text-decoration: underline;
+      color: #000;
     }
 
     .nav-item img {
-        margin-top: 0px;
+        /* margin-top: 0px; */
       width: 24px;
       height: 24px;
-      margin-right: 15px;
+      /* margin-right: 15px; */
     }
 
     .nav-item span {
       white-space: nowrap;
+      color: rgb(0, 0, 0);
       opacity: 0;
       transition: opacity 0.2s ease;
     }
     .nav-item:visited {
-      color: #0d8d8d !important;
+      color: #000000 !important;
     }
     .nav:hover .nav-item span {
       opacity: 1;
